# SlicerPathology

./: CMakeLists.txt  README.md  SlicerPathology.py
CMake/: FindSlicerOpenCV.cmake
LoadTCGA/: CMakeLists.txt
LoadTCGAModule/: CMakeLists.txt  CMakeLists.txt~  LoadTCGA.py  LoadTCGA.py~
QuickTCGA/: qSlicerQuickTCGAModule.cxx  qSlicerQuickTCGAModule.h  qSlicerQuickTCGAModuleWidget.cxx
QuickTCGA/Logic/: CMakeLists.txt  QuickTCGASegmenter.cxx  QuickTCGASegmenter.h  TCGAUtilities.cxx  TCGAUtilities.h  TCGAUtilities.hxx  utilities.h  vtkQuickTCGA.cxx  vtkQuickTCGA.h  vtkSlicerQuickTCGALogic.cxx
QuickTCGA/Logic/NucleusSeg_Yi/: BinaryMaskAnalysisFilter.cxx  BinaryMaskAnalysisFilter.h  CMakeLists.txt  ConnComponents.cpp  ConnComponents.h  HierarchicalMeanshiftClusteringFilter.h  HierarchicalMeanshiftClusteringFilter.hxx  HistologicalEntities.cpp  HistologicalEntities.h  Logger.h  MeanshiftClusteringFilter.h  MeanshiftClusteringFilter.hxx  MorphologicOperations.cpp  MorphologicOperations.h  NeighborOperations.cpp  NeighborOperations.h  Normalization.cpp  Normalization.h  NucleusSegmentationCLIModule.cxx  NucleusSegmentationCLIModule.xml  PixelOperations.cpp  PixelOperations.h  ProcessTileUtils.cxx  ProcessTileUtils.h  SFLSLocalChanVeseSegmentor2D.h  SFLSLocalChanVeseSegmentor2D.hxx  SFLSSegmentor2D.h  SFLSSegmentor2D.hxx  TypeUtils.h  UtilsCVImageIO.cpp  UtilsCVImageIO.h  itkTypedefs.h  mainSegmentSmallImage.cxx  utilityIO.h  utilityScalarImage.h  utilityTileAnalysis.cxx  utilityTileAnalysis.h
QuickTCGA/Resources/UI/: qSlicerQuickTCGAFooBarWidget.ui  qSlicerQuickTCGAModuleWidget.ui
QuickTCGAEffect/: CMakeLists.txt  QuickTCGAEffect.py  QuickTCGAEffect.py~
QuickTCGAEffect/QuickTCGA/: CMakeLists.txt
QuickTCGAEffect/QuickTCGA/Logic/: CMakeLists.txt  QuickTCGASegmenter.cxx  QuickTCGASegmenter.h  ShortCut.h  vtkQuickTCGA.cxx  vtkQuickTCGA.h
QuickTCGAEffect/QuickTCGA/Logic/NucleusSeg_Yi/: CMakeLists.txt  CMakeLists2.txt  Logger.cpp  Logger.h  Normalization.cpp  SFLSLocalChanVeseSegmentor2D.hxx  itkTypedefs.h
QuickTCGAEffect/QuickTCGA/Resources/: qSlicerQuickTCGAModule.qrc
Resources/Colors/: SlicerPathology.csv
SPsegmentation/: CMakeLists.txt  SPsegmentation.py
Segmentation/: CMakeLists.txt  Segmentation.py
ShortCut/: CMakeLists.txt  ShortCut.py  qSlicerShortCutModule.cxx  qSlicerShortCutModule.h  qSlicerShortCutModuleWidget.cxx  qSlicerShortCutModuleWidget.h
ShortCut/Logic/: CMakeLists.txt  ShortCut.cpp  ShortCutSegmenter.cxx  ShortCutSegmenter.h  vtkShortCut.cxx  vtkShortCut.h  vtkSlicerShortCutLogic.cxx  vtkSlicerShortCutLogic.h
ShortCut/Resources/: qSlicerShortCutModule.qrc
ShortCut/Resources/UI/: qSlicerShortCutFooBarWidget.ui  qSlicerShortCutModuleWidget.ui
ShortCut/ShortCut/: CMakeLists.txt  CMakeLists.txt~  qSlicerQuickTCGAModuleWidget.h
ShortCut/ShortCut/Logic/: CMakeLists.txt  ShortCut.cpp  vtkQuickTCGA.cxx  vtkSlicerQuickTCGALogic.h
ShortCut/ShortCut/Logic/NucleusSeg_Yi/: CMakeLists.txt~  Logger.cpp  SFLS.h
ShortCut/ShortCut/Widgets/: qSlicerQuickTCGAFooBarWidget.cxx  qSlicerQuickTCGAFooBarWidget.h
ShortCut/ShortCutCore/: CMakeLists.txt  qSlicerShortCutCoreModule.cxx  qSlicerShortCutCoreModule.h
ShortCut/ShortCutCore/Logic/: CMakeLists.txt  ShortCutCoreSegmenter.cxx  ShortCutCoreSegmenter.h  utilities.h  vtkShortCutCore.h
ShortCut/ShortCutCore/Resources/UI/: qSlicerShortCutCoreFooBarWidget.ui  qSlicerShortCutCoreModuleWidget.ui
ShortCut/ShortCutCore/Widgets/: qSlicerShortCutCoreFooBarWidget.h
ShortCut/Widgets/: qSlicerShortCutFooBarWidget.cxx  qSlicerShortCutFooBarWidget.h
ShortCutCore/: qSlicerShortCutCoreModuleWidget.cxx  qSlicerShortCutCoreModuleWidget.h
ShortCutCore/Logic/: CMakeLists.txt  ShortCutCoreSegmenter.cxx  ShortCutCoreSegmenter.h  vtkShortCutCore.cxx  vtkShortCutCore.h  vtkSlicerShortCutCoreLogic.cxx  vtkSlicerShortCutCoreLogic.h
ShortCutCore/Widgets/: qSlicerShortCutCoreFooBarWidget.cxx
ShortCutEffect/: CMakeLists.txt  ShortCutEffect.py
SlicerPathology/: CMakeLists.txt  SlicerPathology.py
